# mp2-lab2-matrix

./: .gitignore  .travis.yml  .travis.yml.txt  CMakeLists.txt  CMakeLists.txt.txt  Matrix  README.md  TestM  TestVector  Отчет по лабе 2.doc  Отчёт Lab2Sem3(изм).docx  Отчёт Lab2Sem3.docx
GTestLib/: CMakeLists.txt
Vector/: CMakeLists.txt  Lent_Matrix.h  Matrix.h  Triangular_Matrix.h  Vector.h
VectorLib/: CMakeLists.txt  Lent_matrix.h  Matrix.h  Triangular_matrix.h  Vector.cpp  Vector.h
example/: example.sdf  example.sln
example/example/: example.vcxproj
gtest/: CMakeLists.txt  CMakeLists.txt.txt  add MyVector.h  gtest-all.cc  gtest.h
include/: CMakeLists.txt  Vector.cpp  Vector.h  tmatrix.h  utmatrix.h
mp-2 Gusev Nikita/include/: utmatrix.h
mp-2 Gusev Nikita/samples/: sample_matrix.cpp
mp-2 Gusev Nikita/sln/vc10/: gtest.vcxproj  sample_utmatrix.vcxproj  test_utmatrix.vcxproj
mp-2 Gusev Nikita/sln/vc10/Debug/: sample_utmatrix.exe.recipe  sample_utmatrix.ilk  sample_utmatrix.vcxproj.FileListAbsolute.txt  vc142.idb
mp-2 Gusev Nikita/sln/vc10/Debug/sample_utmatrix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sample_utmatrix.lastbuildstate
mp-2 Gusev Nikita/sln/vc9/: sample_utmatrix.vcproj  test_utmatrix.vcproj
mp-2 Gusev Nikita/test/: test_main.cpp  test_tmatrix.cpp  test_tvector.cpp
samples/: CMakeLists.txt  sample_matrix.cpp
samples/include/: utmatrix.h
samples/sln/vc10/: gtest.vcxproj  gtest.vcxproj.filters  sample_utmatrix.vcxproj  sample_utmatrix.vcxproj.filters  test_utmatrix.vcxproj
samples/sln/vc9/: utmatrix.sln
samples/test/: CMakeLists.txt  test_tmatrix.cpp  test_tvector.cpp
sln/: gtest.vcxproj  gtest.vcxproj.filters  sample_utmatrix.vcxproj  sample_utmatrix.vcxproj.filters  test_utmatrix.vcxproj  test_utmatrix.vcxproj.filters
sln/vc10/: gtest.vcxproj  sample_utmatrix.vcxproj  test_utmatrix.vcxproj  test_utmatrix.vcxproj.filters  utmatrix.sln
sln/vc10/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  cl.write.1.tlog  gtest.idb  gtest.lastbuildstate  lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  sample_utmatrix.ilk  sample_utmatrix.lastbuildstate  sample_utmatrix_manifest.rc  test_utmatrix.ilk  test_utmatrix.vcxprojResolveAssemblyReference.cache  test_utmatrix_manifest.rc  vc100.idb  vc140.idb  vc141.idb  vc142.idb
sln/vc10/Debug/gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  gtest.lastbuildstate  lib.command.1.tlog
sln/vc10/Debug/sample_utmatrix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sample_utmatrix.lastbuildstate
sln/vc10/Debug/test_utmatrix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.5688.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test_utmatrix.lastbuildstate
sln/vc9/: gtest.vcproj  utmatrix.sln
src/: CMakeLists.txt  src.vcxproj  src.vcxproj.filters
test/: CMakeLists.txt  CMakeLists.txt.txt  test_BandMatrix.cpp  test_main.cpp  test_matrix.cpp  test_tLentMatrix.cpp  test_tTriangularMatrix.cpp  test_tmatrix.cpp  test_tvector.cpp  test_vector.cpp
vector/: CMakeLists.txt  main.cpp  main.cpp.txt
vectorLib/: CMakeLists.txt  tBandMatrix.h  tTriangularMatrix.h  tmatrix.cpp  tmatrix.h  tvector.cpp  tvector.h
vectorlib/: CMakeLists.txt  CMakeLists.txt.txt  MyMatrix.h  MyMatrix.h.txt  MyVector.h  MyVector.h.txt
